--- a/portfolio/src/Navbar/Navbar.css
+++ b/portfolio/src/Navbar/Navbar.css
@@ -1,8 +1,8 @@
 .main_nav{
     display: flex;
     background-color:  #d3e1ee;
-    width: 100%;
     padding-left: 50px;
+    overflow-x:hidden;
 }
 .nav_link_head {
     text-decoration: none;
